- Module News: Update topic content, Fix edit groups
- Module Users: Update block login, add link view userdetail, link edit user, link delete user for admin, fix user_waiting, support Oauth login redirect
- Module Comment: Add config timeout and comment perpage
- Module Upload: Fix UI dialog position
- Module Voting: Add config for active captcha
- Module Upload: Fix for Microsoft Edge
- Theme default: Fix google map on block company_info

NUKEVIET 4.0.29 Final
- Requires PHP 5.5 or later
- PHPMailer v6.0
- Endroid/qrcode v1.6.5
- CKEditor v4.5.9
- Config allow theme type 
- Update theme default
- Update theme admin default
- Update Memcache class
- Update Request class
- Update DB class
- Module upload: fix download image
- Fix update, upgrade system and extentions
- Fix check update, auto update
- Module users: 
	Add feature for group's leader (creat user, delete user, accept user, delete user, change password), 
	Update theme redirect login, 
	Update facebook login
	Change rule for view list users
	Remove Admin Relogin
- Module extensions: Fix download file
- Add more options for module's theme mobile
- Support statisics for CocCoc browser
- Module news: Optimize database, fix sample data

NUKEVIET 4.0.28
- Fix set tollower meta-tag name
- Update javascript to lastest version: lazyload 1.9.7, Jcop 2.0.4, Select2 4.0.2, jquery-treeview v1.4.2, jquery.imgpreload 1.6.2, jquery.flash v1.3.3, jquery.flash v1.3.3, jquery-ui v1.12.0, jQuery v2.2.3
- update CKEditor 4.5.8
- Module Seotools: Remove site Diagnostic
- Module Users: Allow virtual, fix user custom fields, fix block login, fix users login, fix search user waiting
- Module Upload: Fix error on quickly refresh dir, fix error on refresh large dir
- Module News: Fix check image exists, fix change alias op content, fix function and cat, add block by category 
- Module Contact: Delete link in contact mail containing admin path
- Update theme mobile_nukeviet
- Fix comment on mobile theme
- Fix function nv_xmlOutput